[package]
name = "tichu-client"
version = "0.1.0"
authors = ["Austin Theriot"]
edition = "2021"

[profile.release]
debug = true
opt-level = "z"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.17"
strum = "0.24.1"
strum_macros = "0.24.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.151"
serde_json = "1.0.91"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
yew = {version = "0.19"}
common = { path = "../common", features = ["client"] }
js-sys = "0.3.54"
anyhow = "1.0.44"
bincode = "1.3.3"
lazy_static = "1.4.0"
gloo = "0.8.0"
console_error_panic_hook = "0.1.7"
# local_ipaddress = "0.1.3"
# local-ip-address = "0.4.9"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[dependencies.web-sys]
version = "0.3.60"
features = [
  'KeyboardEvent',
  'WebSocket',
  'Location',
  'Window',
  'FormData',
  'HtmlFormElement',
  'HtmlSelectElement',
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "CssStyleSheet",
  "HtmlStyleElement",
  "HtmlHeadElement",
]